--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Diccionario</title>
 </head>
 
-<body></body>
+<body>
+    <h1>Ninja</h1>
+    <img src="./imagenes/ninja.png" alt="" />
+    <div>
+        <em>noun</em>
+    </div>
+    <p>
+        <ol>
+            <li>A practioner skilled in the Japanese art of ninjutsu</li>
+            <li>A programmer who breaks down problems with zen-like focus</li>
+        </ol>
+    </p>
+
+</body>
 
 </html>
